--- a/views/index/edit.html
+++ b/views/index/edit.html
@@ -34,14 +34,14 @@
                         </select>
                     </div>
                     <div class="form-group" id="u">
-                        <label class="control-label">socks5代理模式验证用户名</label>
+                        <label class="control-label">验证用户名(socks5、HTTP代理模式)</label>
                         <input class="form-control" value="{{.t.U}}" type="text" name="u"
-                               placeholder="不填则无需验证,非socks5模式不填">
+                               placeholder="不填则无需验证">
                     </div>
                     <div class="form-group" id="p">
-                        <label class="control-label">socks5代理模式验证密码</label>
+                        <label class="control-label">验证密码(socks5、HTTP代理模式)</label>
                         <input class="form-control" value="{{.t.P}}" type="text" name="p"
-                               placeholder="不填则无需验证,非socks5模式不填">
+                               placeholder="不填则无需验证">
                     </div>
                 </form>
             </div>
@@ -60,7 +60,7 @@
     arr["tunnelServer"] = ["type", "port", "target", "compress"]
     arr["udpServer"] = ["type", "port", "target", "compress"]
     arr["sock5Server"] = ["type", "port", "compress", "u", "p"]
-    arr["httpProxyServer"] = ["type", "port", "compress"]
+    arr["httpProxyServer"] = ["type", "port", "compress", "u", "p"]
     arr["hostServer"] = ["type", "compress"]
 
     function resetForm() {
