--- a/views/index/edit.html
+++ b/views/index/edit.html
@@ -35,8 +35,15 @@
                     <div class="form-group" id="compress">
                         <label class="control-label">是否加密传输(所有模式均支持)</label>
                         <select class="form-control" name="crypt">
-                            <option {{if eq "0" .t.Crypt}}selected{{end}} value="0">不加密</option>
-                            <option {{if eq "1" .t.Crypt}}selected{{end}} value="1">加密</option>
+                            <option {{if eq false .t.Crypt}}selected{{end}} value="0">不加密</option>
+                            <option {{if eq  true .t.Crypt}}selected{{end}} value="1">加密</option>
+                        </select>
+                    </div>
+                    <div class="form-group" id="compress">
+                        <label class="control-label">是否启用TCP复用(所有模式均支持)</label>
+                        <select class="form-control" name="mux">
+                            <option {{if eq false .t.Mux}}selected{{end}} value="0">不启用</option>
+                            <option {{if eq  true .t.Mux}}selected{{end}} value="1">启用</option>
                         </select>
                     </div>
                     <div class="form-group" id="u">
