--- a/web/views/index/hedit.html
+++ b/web/views/index/hedit.html
@@ -4,11 +4,19 @@
             <h3 class="tile-title">修改</h3>
             <div class="tile-body">
                 <form>
-                    <input type="hidden" name="vkey" value="{{.t.VerifyKey}}">
                     <div class="form-group">
                         <label class="control-label">域名</label>
                         <input class="form-control" value="{{.h.Host}}" type="hidden" name="host" placeholder="域名">
                         <input class="form-control" value="{{.h.Host}}" type="text" name="nhost" placeholder="域名">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">备注</label>
+                        <input class="form-control" value="{{.h.Remark}}" type="text" name="remark" placeholder="备注">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label">客户端id</label>
+                        <input class="form-control" value="{{.h.ClientId}}" type="text" name="client_id"
+                               placeholder="客户端id">
                     </div>
                     <div class="form-group">
                         <label class="control-label">内网目标</label>
